IH-28 Refactor code